syntax = "proto3";

package vault.v1;

option go_package = "github.com/unkeyed/unkey/gen/proto/vault/v1;vaultv1";

message LivenessRequest {}
message LivenessResponse {
  string status = 1;
}

message EncryptRequest {
  string keyring = 1;
  string data = 2;
}

message EncryptResponse {
  string encrypted = 1;
  string key_id = 2;
}

message DecryptRequest {
  string keyring = 1;
  string encrypted = 2;
}

message DecryptResponse {
  string plaintext = 1;
}

message ReEncryptRequest {
  string keyring = 1;
  string encrypted = 2;

  // Specify the key_id to use for re-encryption. If not provided, the latest will be used
  optional string key_id = 3;
}
message ReEncryptResponse {
  string encrypted = 1;
  string key_id = 2;
}

message ReEncryptDEKsRequest {}
message ReEncryptDEKsResponse {}

message EncryptBulkRequest {
  string keyring = 1;
  // map of caller-provided ID to plaintext data
  map<string, string> items = 2;
}
message EncryptBulkResponseItem {
  string encrypted = 1;
  string key_id = 2;
}
message EncryptBulkResponse {
  map<string, EncryptBulkResponseItem> items = 1;
}

message DecryptBulkRequest {
  string keyring = 1;
  // map of caller-provided ID to encrypted ciphertext
  map<string, string> items = 2;
}
message DecryptBulkResponse {
  // map of caller-provided ID to plaintext
  map<string, string> items = 1;
}

service VaultService {
  rpc Liveness(LivenessRequest) returns (LivenessResponse) {}
  rpc Encrypt(EncryptRequest) returns (EncryptResponse) {}
  rpc Decrypt(DecryptRequest) returns (DecryptResponse) {}
  rpc EncryptBulk(EncryptBulkRequest) returns (EncryptBulkResponse) {}
  rpc DecryptBulk(DecryptBulkRequest) returns (DecryptBulkResponse) {}

  // ReEncrypt rec
  rpc ReEncrypt(ReEncryptRequest) returns (ReEncryptResponse) {}
}
